--- a/web/autostat.html
+++ b/web/autostat.html
@@ -72,8 +72,8 @@
                 ]);
 
 
-            set_script_table_section("Test",
-                [["CryoScriptTester", 'temperature of <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/temperature_K" data-odb-editable="1"></span> K and a string: <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test2" data-odb-editable="1"></span>']]);
+            // set_script_table_section("Test",
+            //     [["CryoScriptTester", 'temperature of <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/temperature_K" data-odb-editable="1"></span> K and a string: <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test2" data-odb-editable="1"></span>']]);
 
             setup_script_queue();
         }
@@ -512,7 +512,7 @@
             <table class="mtable">
                 <thead>
                     <tr style="height: 50px">
-                        <th colspan="5" class="mtableheader"><h1>Scripts [undergoing testing]</h1></th>
+                        <th colspan="5" class="mtableheader"><h1>Scripts</h1></th>
                     </tr>
                     <tr><td colspan="5" style="text-align: center" id="script_running"></td></tr>
                 </thead>
