Changed run color

--- a/web/autostat.html
+++ b/web/autostat.html
@@ -197,9 +197,9 @@
                     if(i === seq_idx){
                         if(seq_enabled){
                             document.getElementById(`queue_row${i}`).style.background = "#befdc0"; // green
-                            document.getElementById(`script_row_${seq_fnlist[i]}`).style.background = "#ffffb3"; // yellow
+                            document.getElementById(`script_row_${seq_fnlist[i]}`).style.background = "#befdc0"; // yellow
                         } else {
-                            document.getElementById(`queue_row${i}`).style.background = "#ffb2b2"; // red
+                            document.getElementById(`queue_row${i}`).style.background = "#ffffb3"; // yellow
                         }
                     } else {
                         document.getElementById(`queue_row${i}`).style.background = "";
