Added PID loop for NV101

--- a/web/autostat.html
+++ b/web/autostat.html
@@ -36,9 +36,9 @@
             // PID ---------------------------------------------------------
 
             // fpvs
-            set_pid_table_section("FPVs",
+            set_pid_table_section("Flows",
                              ["PID_20KShield", "PID_100KShield", "PID_TransLineTemp",
-                              "PID_Wall2Temp", "PID_ECollar"]);
+                              "PID_Wall2Temp", "PID_ECollar", "PID_NV101"]);
 
             // purifier heaters
             set_pid_table_section("Purifier Heaters",
